--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "ex-talent-app",
   "private": true,
+  "version": "0.0.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "release": "standard-version"
   },
   "dependencies": {
     "next": "12.0.9",
@@ -13,7 +15,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9"
+    "eslint-config-next": "12.0.9",
+    "postcss": "^8.4.5",
+    "standard-version": "^9.3.2",
+    "tailwindcss": "^3.0.18"
   }
 }
