--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex-talent-app",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,9 +10,12 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "firebase": "^9.6.5",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
