--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "postcss": "^8.4.5",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "standard-version": "^9.3.2",
     "tailwindcss": "^3.0.18"
   }
