--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.5",
     "formik": "^2.2.9",
     "next": "12.0.9",
